@@ -37,7 +37,17 @@ jmap -clstats pid
 jstat -gccause pid 1000
 ```
 
+#### 垃圾回收器CMS的JVM参数配置
 
+```text
+-Xms4g -Xmx4g -Xmn2g -Xss1024K -XX:MetaspaceSize=512m -XX:MaxMetaspaceSize=1024m -XX:ParallelGCThreads=20 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+UseCMSCompactAtFullCollection -XX:CMSInitiatingOccupancyFraction=80
+```
+
+#### 目前我使用的GC的JVM参数配置
+
+```text
+java -XX:+UseG1GC -Xms4g -Xmx4g -server -XX:MaxMetaspaceSize=2g -XX:SoftRefLRUPolicyMSPerMB=200 -XX:ParallelGCThreads=16 -XX:ConcGCThreads=8 -XX:+HeapDumpOnOutOfMemoryError  -XX:HeapDumpPath=./tmp  -Dapp.path=%BASE_PATH% -Dspring.profiles.active=%APP_PROFILE% -jar app.jar
+```
 
 
 
